# hydrobot-firmware

./: .gitignore
hydrobot/: Cargo.toml
hydrobot/src/: daemon.rs  main.rs  store.rs
hydrobot/src/gui/: mod.rs
hydrobot/src/gui/widgets/: controler.rs  controler_details.rs  feedback.rs  mod.rs  ph.rs  query.rs  tds.rs  temperature.rs
hydrobot/src/scheduler/: mod.rs  tasks.rs  utils.rs
src/: main.cpp
